src/objects/Region__c.object
<CustomObject>
    <description>PMC</description>
    <fields>
        <fullName>Business_Name__c</fullName>
        <description>Business Name</description>
        <inlineHelpText>Business Name</inlineHelpText>
        <label>Business Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailTempQualifier__c</fullName>
        <description>Email Temp Qualifier</description>
        <inlineHelpText>Email Temp Qualifier</inlineHelpText>
        <label>EmailTempQualifier</label>
        <picklist>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>StateServed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>StateUnserved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>StateNoBusiness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_Location__c</fullName>
        <formula>Text(Operating_Group__c) &amp;&quot;-&quot;&amp; Text(Operating_Group_Region__c) &amp;&quot; | &quot; &amp;  TEXT(State__c ) &amp; IF(LEN(Name)=2,&quot;&quot;, &quot;-&quot; &amp;Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Undecided_Date__c</fullName>
        <defaultValue>NULL</defaultValue>
        <description>Determines the last date this record was used for a split state when Prospect selected Undecided program type.</description>
        <inlineHelpText>Determines the last date this record was used for a split state when Prospect selected Undecided program type.</inlineHelpText>
        <label>Last Undecided Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Local_Office_Name__c</fullName>
        <description>Local Office Name</description>
        <inlineHelpText>Local Office Name</inlineHelpText>
        <label>Local Office Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Phone__c</fullName>
        <description>Office Phone</description>
        <inlineHelpText>Office Phone</inlineHelpText>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Operating_Group_Region__c</fullName>
        <label>Operating Group Area</label>
        <picklist>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operating_Group__c</fullName>
        <label>Operating Group</label>
        <picklist>
            <picklistValues>
                <fullName>Cambridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redwood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Host Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RegionID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RegionID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_To_ARY_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Route To for ARY 1</description>
        <inlineHelpText>Route To for ARY 1</inlineHelpText>
        <label>Route To ARY 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_To_ARY_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Route To for ARY 2</description>
        <inlineHelpText>Route to for ARY 2</inlineHelpText>
        <label>Route To ARY 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_To_ARY_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Route To for ARY 3</description>
        <inlineHelpText>Route To for ARY 3</inlineHelpText>
        <label>Route To ARY 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_To_ARY_Inc__c</fullName>
        <formula>IF ( (AND( Route_To_ARY_Last__c =1, NOT ISBLANK(Route_To_ARY_2__c))), 2,
IF ( (AND( Route_To_ARY_Last__c =2, NOT ISBLANK(Route_To_ARY_3__c))), 3,
IF ( (AND( Route_To_ARY_Last__c =3, NOT ISBLANK(Route_To_ARY_4__c))), 4,1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route To ARY Inc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Route_To_ARY_Last__c</fullName>
        <description>Last Route To for ARY</description>
        <inlineHelpText>Last Route To for ARY</inlineHelpText>
        <label>Route To ARY Last</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Route_To_ARY_Next__c</fullName>
        <formula>CASE( Route_To_ARY_Inc__c , 
1, Route_To_ARY_1__c , 
2, Route_To_ARY_2__c , 
3, Route_To_ARY_3__c, 
4, Route_To_ARY_4__c, 
Route_To_ARY_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route To ARY Next</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_To_IDD_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route To IDD 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_To_IDD_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route To IDD 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_To_IDD_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route To IDD 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_To_IDD_Inc__c</fullName>
        <formula>IF ( (AND( Route_To_IDD_Last__c =1, NOT ISBLANK(Route_To_IDD_2__c))), 2,
IF ( (AND( Route_To_IDD_Last__c =2, NOT ISBLANK(Route_To_IDD_3__c))), 3,
IF ( (AND( Route_To_IDD_Last__c =3, NOT ISBLANK(Route_To_IDD_4__c))), 4,1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route To IDD Inc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Route_To_IDD_Last__c</fullName>
        <description>Next Logical Route To</description>
        <inlineHelpText>Next Logical Route To</inlineHelpText>
        <label>Route To IDD Last</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Route_To_IDD_Next__c</fullName>
        <formula>CASE( Route_To_IDD_Inc__c , 
1, Route_To_IDD_1__c , 
2, Route_To_IDD_2__c , 
3, Route_To_IDD_3__c, 
4, Route_To_IDD_4__c, 
Route_To_IDD_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route To IDD Next</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_To_Undecided_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Route To for Undecided 1</description>
        <inlineHelpText>Route To for Undecided 1</inlineHelpText>
        <label>Route To Undecided 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RegionsE8hs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_To_Undecided_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Route To for Undecided 2</description>
        <inlineHelpText>Route To for Undecided 2</inlineHelpText>
        <label>Route To Undecided 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RegionsE8i1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_To_Undecided_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Route To for Undecided 3</description>
        <inlineHelpText>Route To for Undecided 3</inlineHelpText>
        <label>Route To Undecided 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RegionsE8iB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_To_Undecided_Inc__c</fullName>
        <formula>IF ( (AND( Route_To_Undecided_Last__c =1, NOT ISBLANK(Route_To_Undecided_2__c))), 2,
IF ( (AND( Route_To_Undecided_Last__c =2, NOT ISBLANK(Route_To_Undecided_3__c))), 3,
IF ( (AND( Route_To_Undecided_Last__c =3, NOT ISBLANK(Route_To_Undecided_4__c))), 4,1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route To Undecided Inc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Route_To_Undecided_Last__c</fullName>
        <description>Last Route To for Undecided</description>
        <inlineHelpText>Last Route To for Undecided</inlineHelpText>
        <label>Route To Undecided Last</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Route_To_Undecided_Next__c</fullName>
        <formula>CASE( Route_To_Undecided_Inc__c , 
1, Route_To_Undecided_1__c , 
2, Route_To_Undecided_2__c , 
3, Route_To_Undecided_3__c, 
4, Route_To_Undecided_4__c, 
Route_To_Undecided_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route To Undecided Next</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Route To</description>
        <inlineHelpText>Route To</inlineHelpText>
        <label>Route To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <formula>CASE(TEXT( State__c ),

&apos;AL&apos;, &apos;Alabama&apos;,
&apos;AK&apos;, &apos;Alaska&apos;,
&apos;AZ&apos;, &apos;Arizona&apos;,
&apos;AR&apos;, &apos;Arkansas&apos;,
&apos;CA&apos;, &apos;California&apos;,
&apos;CO&apos;, &apos;Colorado&apos;,
&apos;CT&apos;, &apos;Connecticut&apos;,
&apos;DE&apos;, &apos;Delaware&apos;,
&apos;FL&apos;, &apos;Florida&apos;,
&apos;GA&apos;, &apos;Georgia&apos;,
&apos;HI&apos;, &apos;Hawaii&apos;,
&apos;ID&apos;, &apos;Idaho&apos;,
&apos;IL&apos;, &apos;Illinois&apos;,
&apos;IN&apos;, &apos;Indiana&apos;,
&apos;IA&apos;, &apos;Iowa&apos;,
&apos;KS&apos;, &apos;Kansas&apos;,
&apos;KY&apos;, &apos;Kentucky&apos;,
&apos;LA&apos;, &apos;Louisiana&apos;,
&apos;ME&apos;, &apos;Maine&apos;,
&apos;MD&apos;, &apos;Maryland&apos;,
&apos;MA&apos;, &apos;Massachusetts&apos;,
&apos;MI&apos;, &apos;Michigan&apos;,
&apos;MN&apos;, &apos;Minnesota&apos;,
&apos;MS&apos;, &apos;Mississippi&apos;,
&apos;MO&apos;, &apos;Missouri&apos;,
&apos;MT&apos;, &apos;Montana&apos;,
&apos;NE&apos;, &apos;Nebraska&apos;,
&apos;NV&apos;, &apos;Nevada&apos;,
&apos;NH&apos;, &apos;New Hampshire&apos;,
&apos;NJ&apos;, &apos;New Jersey&apos;,
&apos;NM&apos;, &apos;New Mexico&apos;,
&apos;NY&apos;, &apos;New York&apos;,
&apos;NC&apos;, &apos;North Carolina&apos;,
&apos;ND&apos;, &apos;North Dakota&apos;,
&apos;OH&apos;, &apos;Ohio&apos;,
&apos;OK&apos;, &apos;Oklahoma&apos;,
&apos;OR&apos;, &apos;Oregon&apos;,
&apos;PA&apos;, &apos;Pennsylvania&apos;,
&apos;RI&apos;, &apos;Rhode Island&apos;,
&apos;SC&apos;, &apos;South Carolina&apos;,
&apos;SD&apos;, &apos;South Dakota&apos;,
&apos;TN&apos;, &apos;Tennessee&apos;,
&apos;TX&apos;, &apos;Texas&apos;,
&apos;UT&apos;, &apos;Utah&apos;,
&apos;VT&apos;, &apos;Vermont&apos;,
&apos;VA&apos;, &apos;Virginia&apos;,
&apos;WA&apos;, &apos;Washington&apos;,
&apos;WV&apos;, &apos;West Virginia&apos;,
&apos;WI&apos;, &apos;Wisconsin&apos;,
&apos;WY&apos;, &apos;Wyoming&apos;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State</description>
        <inlineHelpText>State</inlineHelpText>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Region</description>
        <inlineHelpText>Region</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>frm_Operating_Group_Region__c</fullName>
        <formula>Text(Operating_Group__c) &amp;&quot;-&quot;&amp; Text(Operating_Group_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operating Group + Area</label>
        <type>Text</type>
    </fields>
    <label>Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Operating_Group__c</columns>
        <columns>Business_Name__c</columns>
        <columns>State__c</columns>
        <columns>Local_Office_Name__c</columns>
        <columns>Route_To_ARY_1__c</columns>
        <columns>Route_To_ARY_2__c</columns>
        <columns>Route_To_ARY_3__c</columns>
        <columns>Route_To_ARY_4__c</columns>
        <columns>Route_To_IDD_1__c</columns>
        <columns>Route_To_IDD_2__c</columns>
        <columns>Route_To_IDD_3__c</columns>
        <columns>Route_To_IDD_4__c</columns>
        <columns>Route_To_Undecided_1__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>AL</value>
        </filters>
        <label>AL Regions</label>
    </listViews>
    <listViews>
        <fullName>All_Regions</fullName>
        <columns>Operating_Group__c</columns>
        <columns>State__c</columns>
        <columns>NAME</columns>
        <columns>Route_To_ARY_1__c</columns>
        <columns>Route_To_IDD_1__c</columns>
        <columns>Route_To_Undecided_1__c</columns>
        <columns>Route_To_ARY_2__c</columns>
        <columns>Route_To_IDD_2__c</columns>
        <columns>Route_To_Undecided_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Regions</label>
    </listViews>
    <listViews>
        <fullName>Cambridge</fullName>
        <columns>NAME</columns>
        <columns>Business_Name__c</columns>
        <columns>Operating_Group_Region__c</columns>
        <columns>State__c</columns>
        <columns>Local_Office_Name__c</columns>
        <columns>Office_Phone__c</columns>
        <columns>Route_To_ARY_1__c</columns>
        <columns>Route_To_ARY_2__c</columns>
        <columns>Route_To_ARY_3__c</columns>
        <columns>Route_To_ARY_4__c</columns>
        <columns>Route_To_IDD_1__c</columns>
        <columns>Route_To_IDD_2__c</columns>
        <columns>Route_To_IDD_3__c</columns>
        <columns>Route_To_IDD_4__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operating_Group__c</field>
            <operation>equals</operation>
            <value>Cambridge</value>
        </filters>
        <label>Cambridge</label>
    </listViews>
    <listViews>
        <fullName>NJ_Regions</fullName>
        <columns>NAME</columns>
        <columns>Route_To_ARY_1__c</columns>
        <columns>Route_To_IDD_1__c</columns>
        <columns>Route_To_Undecided_1__c</columns>
        <columns>Route_To_ARY_2__c</columns>
        <columns>Route_To_IDD_2__c</columns>
        <columns>Route_To_Undecided_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NJ</value>
        </filters>
        <label>NJ Regions</label>
    </listViews>
    <listViews>
        <fullName>PA_Regions</fullName>
        <columns>NAME</columns>
        <columns>Local_Office_Name__c</columns>
        <columns>Office_Phone__c</columns>
        <columns>Route_To_ARY_1__c</columns>
        <columns>Route_To_IDD_1__c</columns>
        <columns>Route_To_Undecided_1__c</columns>
        <columns>Route_To_ARY_2__c</columns>
        <columns>Route_To_IDD_2__c</columns>
        <columns>Route_To_Undecided_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>PA</value>
        </filters>
        <label>PA Regions</label>
    </listViews>
    <listViews>
        <fullName>Regions_Only</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Business_Name__c</columns>
        <columns>Local_Office_Name__c</columns>
        <columns>Office_Phone__c</columns>
        <columns>Route_To_ARY_1__c</columns>
        <columns>Route_To_IDD_1__c</columns>
        <columns>Route_To_Undecided_1__c</columns>
        <columns>Operating_Group__c</columns>
        <columns>Operating_Group_Region__c</columns>
        <columns>RegionID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>FL</value>
        </filters>
        <label>FL Regions</label>
        <sharedTo>
            <group>Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>States_Only</fullName>
        <columns>NAME</columns>
        <columns>EmailTempQualifier__c</columns>
        <columns>Business_Name__c</columns>
        <columns>Route_To_ARY_1__c</columns>
        <columns>Route_To_IDD_1__c</columns>
        <columns>Route_To_Undecided_1__c</columns>
        <columns>Route_To_Undecided_2__c</columns>
        <columns>Operating_Group__c</columns>
        <columns>Operating_Group_Region__c</columns>
        <columns>Office_Phone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>State</value>
        </filters>
        <label>States Only</label>
        <sharedTo>
            <group>Admins</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IJ00000000MpXMAU_00NJ0000000e2TOMAY</fullName>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <field>Account_Administration__c.Region__c</field>
        <filterItems>
            <field>Region__c.Type__c</field>
            <operation>equals</operation>
            <value>Region</value>
        </filterItems>
        <filterItems>
            <field>Region__c.Type__c</field>
            <operation>equals</operation>
            <value>State</value>
        </filterItems>
        <infoMessage>Select the Region to which you wish to add/remove the Recruiter</infoMessage>
        <isOptional>true</isOptional>
        <name>User Account Administration_Region</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IZ00000000AppMAE_00NZ0000000GGF4MAO</fullName>
        <active>true</active>
        <field>Prospects__c.Region__c</field>
        <filterItems>
            <field>Region__c.Type__c</field>
            <operation>equals</operation>
            <value>Region</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Prospect_Region</name>
    </namedFilters>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Operating_Group</fullName>
        <active>true</active>
        <description>Operating Group</description>
        <errorConditionFormula>ISNULL(TEXT( Operating_Group__c ))</errorConditionFormula>
        <errorMessage>Operating Group is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Operating_Group_Region</fullName>
        <active>true</active>
        <description>Operating Group Region</description>
        <errorConditionFormula>ISNULL( TEXT(Operating_Group_Region__c ))</errorConditionFormula>
        <errorMessage>Operating Group Region is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Route_To</fullName>
        <active>true</active>
        <description>Route To is Null</description>
        <errorConditionFormula>ISNULL( Route_To__c)</errorConditionFormula>
        <errorMessage>Route To is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Route_To_ARY_1_Rquired</fullName>
        <active>false</active>
        <description>Route To ARY 1 is Required</description>
        <errorConditionFormula>ISBLANK( Route_To_ARY_1__c)</errorConditionFormula>
        <errorMessage>Route To ARY 1 is a Required field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Route_To_IDD_1_Required</fullName>
        <active>false</active>
        <description>Route To IDD 1 Required</description>
        <errorConditionFormula>ISBLANK( Route_To_IDD_1__c)</errorConditionFormula>
        <errorMessage>Route To IDD 1 is a Required field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Route_To_Undecided_1_Required</fullName>
        <active>false</active>
        <description>Route To Undecided 1 Required</description>
        <errorConditionFormula>ISBLANK( Route_To_Undecided_1__c)</errorConditionFormula>
        <errorMessage>Route To Undecided 1 is a Required field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State</fullName>
        <active>true</active>
        <description>State</description>
        <errorConditionFormula>ISNULL(TEXT( State__c ))</errorConditionFormula>
        <errorMessage>State is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type</fullName>
        <active>true</active>
        <description>Type</description>
        <errorConditionFormula>ISNULL(TEXT(Type__c))</errorConditionFormula>
        <errorMessage>Type is required</errorMessage>
    </validationRules>
</CustomObject>